erstellen der Navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <%= yield %>
-  </body>
+ <body>
+  <%= render "shared/navbar" %>
+  <%= render "shared/search_bar" %>
+  <%= yield %>
+</body>
 </html>
