--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,19 +1,29 @@
-<nav class="navbar">
-  <div class="navbar-left">
-    <%= link_to "AirbnbClone", root_path, class: "logo" %>
-    <%= link_to "Unterkünfte", listings_path, class: "nav-main-link" %>
-    <%= link_to "Entdeckungen", "#", class: "nav-main-link" %>
-    <%= link_to "Services", "#", class: "nav-main-link" %>
-  </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+  <div class="container">
+    <%= link_to "AirbnbClone", root_path, class: "navbar-brand text-danger fw-bold" %>
 
-  <div class="navbar-right">
-    <%= link_to "Werde Gastgeber:in", "#", class: "nav-action" %>
-    <%= link_to "Hilfe‑Center", "#", class: "nav-action" %>
-    <% if user_signed_in? %>
-      <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-action" %>
-    <% else %>
-      <%= link_to "Anmelden", new_user_session_path, class: "nav-action" %>
-      <%= link_to "Registrieren", new_user_registration_path, class: "nav-action" %>
-    <% end %>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item"><%= link_to "Unterkünfte", listings_path, class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Entdeckungen", "#", class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Services", "#", class: "nav-link" %></li>
+      </ul>
+
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><%= link_to "Werde Gastgeber:in", "#", class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Hilfe‑Center", "#", class: "nav-link" %></li>
+
+        <% if user_signed_in? %>
+          <li class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+        <% else %>
+          <li class="nav-item"><%= link_to "Anmelden", new_user_session_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "Registrieren", new_user_registration_path, class: "nav-link" %></li>
+        <% end %>
+      </ul>
+    </div>
   </div>
 </nav>
